--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,15 +16,28 @@
     <RelativeLayout
         android:id="@+id/rlBottomBar"
         android:layout_width="match_parent"
-        android:layout_height="54dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:padding="8dp">
+
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/ivProfile"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:scaleType="fitCenter"
+            app:riv_corner_radius="18dip"
+            app:riv_mutate_background="true"
+            app:riv_oval="true"
+            app:riv_tile_mode="repeat" />
 
         <EditText
             android:id="@+id/etTextMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="36dp" />
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="36dp"
+            android:layout_toRightOf="@+id/ivProfile"
+            android:maxLines="5" />
 
         <ImageView
             android:id="@+id/ivSend"
