--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -9,10 +9,10 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvChat"
-        android:padding="8dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/rlBottomBar" />
+        android:layout_above="@+id/rlBottomBar"
+        android:padding="8dp" />
 
     <RelativeLayout
         android:id="@+id/rlBottomBar"
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="36dp"
+            android:layout_marginRight="44dp"
             android:layout_toRightOf="@+id/ivProfile"
             android:maxLines="5" />
 
@@ -45,6 +45,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:padding="8dp"
+            android:foreground="?attr/selectableItemBackground"
             android:src="@android:drawable/ic_menu_send" />
 
     </RelativeLayout>
