Add GIF model class, giff fetching and displaying capability, and layout fixes

--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -39,10 +39,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <ImageView
+                android:id="@+id/ivGif"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp" />
+
             <TextView
                 android:id="@+id/tvTextMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/ivGif"
                 android:text="TEXT MESSAGE" />
 
         </RelativeLayout>
