--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             android:minHeight="0dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -64,8 +64,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvChat"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/rlBottomBar"
+        android:layout_height="match_parent"
         android:padding="8dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
@@ -80,6 +79,7 @@
             android:id="@+id/ivProfile"
             android:layout_width="36dp"
             android:layout_height="36dp"
+            android:foreground="?attr/selectableItemBackground"
             android:scaleType="fitCenter"
             app:riv_corner_radius="18dip"
             app:riv_mutate_background="true"
