--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             android:minHeight="0dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways">
+            app:layout_scrollFlags="scroll|enterAlways">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -35,6 +35,7 @@
                     android:id="@+id/rvGames"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/colorPrimaryDark"
                     android:orientation="horizontal"
                     android:padding="8dp"
                     app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
@@ -43,6 +44,7 @@
                     android:id="@+id/rlGameInfo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary"
                     android:visibility="gone">
 
                     <TextView
@@ -52,6 +54,33 @@
                         android:gravity="center"
                         android:padding="16dp"
                         android:text="LEADERBOARD: NOUKNJKNKNK" />
+
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/cvPlayButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tvLeaderboard"
+                        android:layout_centerHorizontal="true"
+                        android:layout_margin="10dp"
+                        android:foreground="?attr/selectableItemBackground"
+                        app:cardBackgroundColor="@color/colorAccent"
+                        app:cardCornerRadius="18dp"
+                        app:cardElevation="0dp"
+                        app:cardPreventCornerOverlap="true"
+                        app:contentPaddingBottom="6dp"
+                        app:contentPaddingLeft="16dp"
+                        app:contentPaddingRight="16dp"
+                        app:contentPaddingTop="6dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:alpha="0.5"
+                            android:padding="4dp"
+                            android:text="PLAY"
+                            android:textColor="@color/colorBlack" />
+
+                    </android.support.v7.widget.CardView>
 
                 </RelativeLayout>
 
