--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -55,5 +55,17 @@
 
     </android.support.v7.widget.CardView>
 
+    <TextView
+        android:id="@+id/tvInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cvMessage"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="8dp"
+        android:text="Nishant Jain  |  MON, Oct 5, 7:35 PM"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="12sp"
+        android:visibility="gone" />
+
 
 </RelativeLayout>
