--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -94,6 +94,7 @@
         android:id="@+id/rvChat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="54dp"
         android:padding="8dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
@@ -134,6 +135,7 @@
             android:src="@android:drawable/ic_menu_send" />
 
     </RelativeLayout>
+
 
 </android.support.design.widget.CoordinatorLayout>
 
