--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -33,7 +33,7 @@
         app:cardCornerRadius="18dp"
         app:cardElevation="0dp"
         app:cardPreventCornerOverlap="true"
-        app:contentPadding="8dp">
+        app:contentPadding="12dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -42,7 +42,8 @@
             <ImageView
                 android:id="@+id/ivGif"
                 android:layout_width="wrap_content"
-                android:layout_height="200dp" />
+                android:layout_height="200dp"
+                android:layout_marginBottom="4dp" />
 
             <TextView
                 android:id="@+id/tvTextMessage"
