--- a/app/src/main/res/layout/activity_twenty_fourty_eight.xml
+++ b/app/src/main/res/layout/activity_twenty_fourty_eight.xml
@@ -2,9 +2,146 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.games.TwentyFourtyEight">
 
+    <android.support.v7.widget.GridLayout
+        android:id="@+id/glMenu"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </android.support.v7.widget.GridLayout>
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.27" />
+
+    <android.support.v7.widget.GridLayout
+        android:id="@+id/glBoard"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline6"
+        app:columnCount="4"
+        app:rowCount="4">
+
+        <TextView
+            android:id="@+id/s0"
+            android:layout_width="87dp"
+            android:layout_height="87dp"
+            android:text="0"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/s1"
+            android:layout_width="87dp"
+            android:layout_height="87dp"
+            android:text="1"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/s2"
+            android:layout_width="87dp"
+            android:layout_height="87dp"
+            android:text="2"
+            android:gravity="center"/>
+        <TextView
+            android:id="@+id/s3"
+            android:layout_width="87dp"
+            android:layout_height="87dp"
+            android:text="3"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/s4"
+            android:layout_width="87dp"
+            android:layout_height="87dp"
+            android:text="4"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/s5"
+            android:layout_width="87dp"
+            android:layout_height="87dp"
+            android:text="5"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/s6"
+            android:layout_width="87dp"
+            android:layout_height="87dp"
+            android:text="6"
+            android:gravity="center"/>
+        <TextView
+            android:id="@+id/s7"
+            android:layout_width="87dp"
+            android:layout_height="87dp"
+            android:text="7"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/s8"
+            android:layout_width="87dp"
+            android:layout_height="87dp"
+            android:text="8"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/s9"
+            android:layout_width="87dp"
+            android:layout_height="87dp"
+            android:text="9"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/s10"
+            android:layout_width="87dp"
+            android:layout_height="87dp"
+            android:text="10"
+            android:gravity="center"/>
+        <TextView
+            android:id="@+id/s11"
+            android:layout_width="87dp"
+            android:layout_height="87dp"
+            android:text="11"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/s12"
+            android:layout_width="87dp"
+            android:layout_height="87dp"
+            android:text="12"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/s13"
+            android:layout_width="87dp"
+            android:layout_height="87dp"
+            android:text="13"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/s14"
+            android:layout_width="87dp"
+            android:layout_height="87dp"
+            android:text="14"
+            android:gravity="center"/>
+        <TextView
+            android:id="@+id/s15"
+            android:layout_width="87dp"
+            android:layout_height="87dp"
+            android:text="15"
+            android:gravity="center"/>
+
+    </android.support.v7.widget.GridLayout>
 </android.support.constraint.ConstraintLayout>
