--- a/app/src/main/res/layout/activity_twenty_fourty_eight.xml
+++ b/app/src/main/res/layout/activity_twenty_fourty_eight.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/clLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.games.TwentyFourtyEight">
@@ -28,120 +29,124 @@
         android:id="@+id/glBoard"
         android:layout_width="350dp"
         android:layout_height="350dp"
+        app:columnCount="4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline6"
-        app:columnCount="4"
         app:rowCount="4">
 
         <TextView
             android:id="@+id/s0"
             android:layout_width="87dp"
             android:layout_height="87dp"
-            android:text="0"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="0" />
 
         <TextView
             android:id="@+id/s1"
             android:layout_width="87dp"
             android:layout_height="87dp"
-            android:text="1"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="1" />
 
         <TextView
             android:id="@+id/s2"
             android:layout_width="87dp"
             android:layout_height="87dp"
-            android:text="2"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="2" />
+
         <TextView
             android:id="@+id/s3"
             android:layout_width="87dp"
             android:layout_height="87dp"
-            android:text="3"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="3" />
 
         <TextView
             android:id="@+id/s4"
             android:layout_width="87dp"
             android:layout_height="87dp"
-            android:text="4"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="4" />
 
         <TextView
             android:id="@+id/s5"
             android:layout_width="87dp"
             android:layout_height="87dp"
-            android:text="5"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="5" />
 
         <TextView
             android:id="@+id/s6"
             android:layout_width="87dp"
             android:layout_height="87dp"
-            android:text="6"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="6" />
+
         <TextView
             android:id="@+id/s7"
             android:layout_width="87dp"
             android:layout_height="87dp"
-            android:text="7"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="7" />
 
         <TextView
             android:id="@+id/s8"
             android:layout_width="87dp"
             android:layout_height="87dp"
-            android:text="8"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="8" />
 
         <TextView
             android:id="@+id/s9"
             android:layout_width="87dp"
             android:layout_height="87dp"
-            android:text="9"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="9" />
 
         <TextView
             android:id="@+id/s10"
             android:layout_width="87dp"
             android:layout_height="87dp"
-            android:text="10"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="10" />
+
         <TextView
             android:id="@+id/s11"
             android:layout_width="87dp"
             android:layout_height="87dp"
-            android:text="11"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="11" />
 
         <TextView
             android:id="@+id/s12"
             android:layout_width="87dp"
             android:layout_height="87dp"
-            android:text="12"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="12" />
 
         <TextView
             android:id="@+id/s13"
             android:layout_width="87dp"
             android:layout_height="87dp"
-            android:text="13"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="13" />
 
         <TextView
             android:id="@+id/s14"
             android:layout_width="87dp"
             android:layout_height="87dp"
-            android:text="14"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="14" />
+
         <TextView
             android:id="@+id/s15"
             android:layout_width="87dp"
             android:layout_height="87dp"
-            android:text="15"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="15" />
 
     </android.support.v7.widget.GridLayout>
 </android.support.constraint.ConstraintLayout>
