Add score keeping functionality.

--- a/app/src/main/res/layout/activity_twenty_fourty_eight.xml
+++ b/app/src/main/res/layout/activity_twenty_fourty_eight.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff3e8"
-    tools:context=".activities.games.TwentyFourtyEight">
+    tools:context=".activities.games.TwentyFortyEight">
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline6"
@@ -20,12 +20,12 @@
         android:layout_width="360dp"
         android:layout_height="360dp"
         android:background="#cebcab"
-        app:columnCount="4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline6"
-        app:rowCount="4">
+        app:rowCount="4"
+        app:columnCount="4">
 
     </android.support.v7.widget.GridLayout>
 
@@ -34,8 +34,7 @@
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="#ebc75a"
+        android:background="#eec22e"
         android:gravity="center"
         android:text="2048"
         android:textColor="#ffffff"
@@ -43,17 +42,18 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/glBoard"
         app:layout_constraintStart_toStartOf="@+id/glBoard"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.451" />
 
     <Button
         android:id="@+id/bReset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:background="#e28913"
         android:text="Restart"
+        android:textAllCaps="true"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/glBoard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline8"
@@ -65,5 +65,33 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
+
+    <TextView
+        android:id="@+id/tvScoreLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:text="Score"
+        android:textColor="#776e65"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toEndOf="@+id/tvTitle"
+        app:layout_constraintTop_toTopOf="@+id/tvTitle" />
+
+    <TextView
+        android:id="@+id/tvScore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="0"
+        android:textColor="#776e65"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tvTitle"
+        app:layout_constraintTop_toBottomOf="@+id/tvScoreLabel" />
 
 </android.support.constraint.ConstraintLayout>
