Replace hardcoded string values with resource string placeholders. Fix spelling mistake (fourty => forty).

--- a/app/src/main/res/layout/activity_twenty_fourty_eight.xml
+++ b/app/src/main/res/layout/activity_twenty_fourty_eight.xml
@@ -36,7 +36,7 @@
         android:layout_marginStart="8dp"
         android:background="#eec22e"
         android:gravity="center"
-        android:text="2048"
+        android:text="@string/twenty_forty_eight"
         android:textColor="#ffffff"
         android:textSize="50sp"
         android:textStyle="bold"
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#e28913"
-        android:text="Restart"
+        android:text="@string/restart"
         android:textAllCaps="true"
         android:textColor="#ffffff"
         android:textStyle="bold"
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="center"
-        android:text="Score"
+        android:text="@string/score"
         android:textColor="#776e65"
         android:textSize="40sp"
         android:textStyle="bold"
@@ -86,7 +86,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="0"
         android:textColor="#776e65"
         android:textSize="40sp"
         android:textStyle="bold"
