--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -62,6 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/cvMessage"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="Nishant Jain  |  MON, Oct 5, 7:35 PM"
         android:textColor="@android:color/holo_blue_dark"
