--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -14,4 +14,10 @@
         android:visible="true"
         app:showAsAction="ifRoom|withText" />
 
+    <item
+        android:id="@+id/signOut"
+        android:title="SIGN OUT"
+        android:visible="true"
+        app:showAsAction="ifRoom|withText" />
+
 </menu>
