--- a/app/src/main/res/layout/activity_tic_tac_toe.xml
+++ b/app/src/main/res/layout/activity_tic_tac_toe.xml
@@ -10,15 +10,18 @@
 
     <android.support.v7.widget.GridLayout
         android:id="@+id/glBoard"
-        android:layout_width="376dp"
-        android:layout_height="376dp"
-        android:layout_marginBottom="204dp"
+        android:layout_width="342dp"
+        android:layout_height="342dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="#000"
+        app:columnCount="3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:rowCount="3"
-        app:columnCount="3">
+        app:layout_constraintTop_toBottomOf="@+id/tvTurn"
+        app:rowCount="3">
 
     </android.support.v7.widget.GridLayout>
 
@@ -26,13 +29,14 @@
         android:id="@+id/tvTurn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
         android:gravity="center"
+        android:textColor="#000"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:textColor="#000"
-        app:layout_constraintBottom_toTopOf="@+id/glBoard"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
